// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render with given locale 1`] = `
<span
  class="ghostIndicator"
>
  de-at
</span>
`;

exports[`Should render with given locale and className 1`] = `
<span
  class="ghostIndicator test"
>
  de-at
</span>
`;
